spade-tests/src/snapshots/spade_tests__domain_inference__array_shorthand_literals_are_in_the_operand_domain.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test<'a, 'b>(a: 'a bool) -> 'b [bool; 1] {
    [a; 1]
}

error: Mixing signals in different domains
  ┌─ testinput:1:49
  │  
1 │   entity test<'a, 'b>(a: 'a bool) -> 'b [bool; 1] {
  │                                         --------- This has domain 'b
  │ ╭─────────────────────────────────────────────────^
2 │ │     [a; 1]
3 │ │ }
  │ ╰─^ This has domain 'a
