spade-tests/src/snapshots/spade_tests__domain_inference__arrays_require_same_domain.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test<'a, 'b>(a: 'a bool, b: 'b bool) -> 'a [bool; 2] {
    [a, b]
}

error: Mixing signals in different domains
  ┌─ testinput:2:9
  │
2 │     [a, b]
  │      -  ^ This has domain 'b
  │      │   
  │      This has domain 'a
  │
  = help: All array members must be in the same domain
