spade-tests/src/snapshots/spade_tests__domain_inference__binary_operator_expression_mixing_domains.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test<'a, 'b>(a: 'a bool, b: 'b bool) -> 'b bool {
    a && b
}

error: Mixing signals in different domains
  ┌─ testinput:2:10
  │
2 │     a && b
  │     -    ^ This has domain 'b
  │     │     
  │     This has domain 'a
