spade-tests/src/snapshots/spade_tests__domain_inference__const_domain_cannot_be_set_with_named.snap
---
source: spade-tests/src/domain_inference.rs
---
fn test<'a>(a: 'a bool, b: 'const inv &bool) {
    set b = &a;
}


error: Domain mismatch, expected 'const, but it is in 'a
  ┌─ testinput:2:14
  │
2 │     set b = &a;
  │         -    ^ Expected domain 'const, found 'a
  │         │     
  │         'const inferred here
  │
  = help: The domain of the set value must be compatible with the domain of the target
