spade-tests/src/snapshots/spade_tests__domain_inference__domains_propagate_through_identifiers.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test<'a, 'b>(a: 'a bool, b: 'b bool) -> 'a ((bool, bool), bool) {
    let c = (a, a);
    (c, b)
}

error: Mixing signals in different domains
  ┌─ testinput:3:9
  │
3 │     (c, b)
  │      -  ^ This has domain 'b
  │      │   
  │      This has domain 'a
  │
  = help: All tuple members must be in the same domain
