spade-tests/src/snapshots/spade_tests__domain_inference__explicit_reg_clock_must_be_in_same_domain_as_value.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test<'a, 'b>(clk: 'a clock, b: 'b bool) {
    reg(clk) x = b;
}


error: Domain mismatch, expected 'b, but it is in 'a
  ┌─ testinput:2:9
  │
2 │     reg(clk) x = b;
  │         ^^^      - The value is in domain 'b.
  │         │         
  │         Expected domain 'b, found 'a
  │
  = help: The domain of the clock must be the same as the value
